.archive/clusters/homelab-1/.network-policies/allow-ingress-from-uptime-kuma/source/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-uptime-kuma
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma-app
      app.kubernetes.io/instance: uptime-kuma-app
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              networking/allow-ingress-to-uptime-kuma: "true"
